--- a/web_page.html
+++ b/web_page.html
@@ -6,10 +6,14 @@
 <body>
 <h1>The img element</h1>
 
-<img src="images/img.jpeg" alt="Girl in a jacket" width="500" height="600">
+<img src="images/img.jpeg" alt="Girl in a jacket" width="500" height="600"><br>
 
+<a href="about_company.html.txt">About Us</a>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
 
 </body>
 </html>
